fixed the intro page for desktop versions content was overlapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,12 +132,12 @@ footer {
 }
 
 /*intro page*/
-
 .intro-img {
-  width: 100%;
+  width: 50%;
   margin: auto;
   overflow-x: hidden;
   position: relative;
+  left: 25%;
 }
 
 .intro-container {
@@ -366,7 +366,7 @@ footer {
     font-size: small;
     color: #ffffff;
     border-radius: 10px;
-    overflow-y: scroll;
+    overflow-y: hidden;
 
     text-align: center;
   }
@@ -385,8 +385,8 @@ footer {
 
   /*intro page*/
   .hero-text {
-    position: absolute;
-    left: 40%;
+    position: relative;
+    text-align: center;
     background-color: rgba(26, 24, 21, 0.733);
     color: #ffffff;
     border-style: solid;
@@ -394,33 +394,28 @@ footer {
     padding: 5px;
   }
 
-  .intro-container {
-    margin: 150px auto;
-    width: 40%;
+  .intro-img {
+    left: 5%;
+    width: 30%;
+    margin: 10px;
+    bottom: 0px;
+    border-radius: 10px;
+  }
 
-    bottom: 20px;
+  .intro-container {
+    margin: auto;
+    width: 40%;
+    bottom: 10px;
     position: relative;
     right: 25%;
     justify-content: center;
     overflow-x: hidden;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: rgba(63, 60, 55, 0.733);
   }
 
   .intro-text {
     color: #ffffff;
     background-color: rgba(26, 24, 21, 0.733);
     font-size: 20px;
-  }
-
-  .intro-container img {
-    position: relative;
-
-    float: left;
-    height: 500px;
-    width: 500px;
-    padding: 0 10px 0 0;
   }
 
   .customer-reviews {
